RESOLVED FIXED 80576
CSS 2.1 failure: text-indent-intrinsic-003 fails
https://bugs.webkit.org/show_bug.cgi?id=80576
Summary CSS 2.1 failure: text-indent-intrinsic-003 fails
Robert Hogan
Reported 2012-03-07 23:47:36 PST
When there are two consecutive empty <span> blocks, text-indent is ignored for the second one even though it is still on the first formatted line.
Attachments
Patch (18.76 KB, patch)
2012-07-14 05:25 PDT, Robert Hogan
no flags
Patch (18.80 KB, patch)
2012-07-18 12:56 PDT, Robert Hogan
webkit.review.bot: commit-queue-
Robert Hogan
Comment 1 2012-03-07 23:59:06 PST
The problem appears to be in computeInlinePreferredLogicalWidths(): textIndent is currently only added once, to the first object on the formatted line. Instead it needs to be applied to each object on the first formatted line and decremented appropriately each time.
Robert Hogan
Comment 2 2012-07-14 05:25:28 PDT
Eric Seidel (no email)
Comment 3 2012-07-16 14:49:25 PDT
Comment on attachment 152421 [details] Patch Seems reasonable.
WebKit Review Bot
Comment 4 2012-07-18 12:23:04 PDT
Comment on attachment 152421 [details] Patch Rejecting attachment 152421 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: n Source/WebKit/chromium/tests/CCDamageTrackerTest.cpp Failed to merge in the changes. Patch failed at 0001 [chromium] Fix style for numeric literals in chromium unit test code When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/13276622
Robert Hogan
Comment 5 2012-07-18 12:56:09 PDT
WebKit Review Bot
Comment 6 2012-07-19 11:26:23 PDT
Comment on attachment 153070 [details] Patch Rejecting attachment 153070 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ommit-queue/Source/WebKit/chromium/third_party/snappy/src --revision 63 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 46>At revision 63. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output: http://queues.webkit.org/results/13305001
Robert Hogan
Comment 7 2012-07-19 11:47:58 PDT
Note You need to log in before you can comment on or make changes to this bug.