CSS 2.1 failure: text-indent-intrinsic-003 fails https://bugs.webkit.org/show_bug.cgi?id=80576

Reviewed by Eric Seidel.

Source/WebCore:

Negative values of text-indent should be distributed across inline children until used up.
This fixes text-indent-intrinsic-003 and text-indent-intrinsic-004.

Tests: css2.1/20110323/text-indent-intrinsic-001.htm
       css2.1/20110323/text-indent-intrinsic-002.htm
       css2.1/20110323/text-indent-intrinsic-003.htm
       css2.1/20110323/text-indent-intrinsic-004.htm

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeInlinePreferredLogicalWidths): If text-indent is negative, keep
 applying it to inline children in the first formatted line until it's reduced to zero. This isn't
 a consideration when text-indent is a positive value.

LayoutTests:

* css2.1/20110323/text-indent-intrinsic-001-expected.html: Added.
* css2.1/20110323/text-indent-intrinsic-001.htm: Added.
* css2.1/20110323/text-indent-intrinsic-002-expected.html: Added.
* css2.1/20110323/text-indent-intrinsic-002.htm: Added.
* css2.1/20110323/text-indent-intrinsic-003-expected.html: Added.
* css2.1/20110323/text-indent-intrinsic-003.htm: Added.
* css2.1/20110323/text-indent-intrinsic-004-expected.html: Added.
* css2.1/20110323/text-indent-intrinsic-004.htm: Added.

Canonical link: https://commits.webkit.org/109588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123130 268f45cc-cd09-0410-ab3c-d52691b4dbfc